# vpin-cpp-processor

./: CMakeLists.txt  Dockerfile  INTEGRATION.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  build.sh  docker-compose.yml
docs/: AVX2_256_bit_vs_AVX_512_512_bit_Processing_Comparison.md  AVX2_Horizontal_Sum_Reducing_4_Doubles_to_1.md  CPU_Parallelism_SIMD_vs_Multi_Core_for_VPIN_Processing.md  IEEE_754_Double_Precision.md  MEV_SHIELD_UI_ARCHITECTURE.md  ONCHAIN_INTEGRATION_GUIDE.md  VPIN_Multi_Core_Parallelization_Analysis.md
include/: kafka_consumer.hpp  vpin_engine.hpp
src/: main.cpp
src/api/: plugin_bridge.py
src/core/: vpin_engine.cpp
src/kafka/: kafka_consumer.cpp
